[artf496357] -- alignment issue in opera fixed.

--- a/framework/phresco-framework-web/src/main/webapp/themes/photon/css/phresco.css
+++ b/framework/phresco-framework-web/src/main/webapp/themes/photon/css/phresco.css
@@ -2914,6 +2914,8 @@ table {
     width: 100%;
     height: 100%;
     text-align: center;
+    margin-top:17px;
+    margin-right: 8px;
 }
 
 .testCaseLog {
